# cryptography-suite

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  API_CLI_CONTRACT.md  CHANGELOG.md  CONTRIBUTING.md  EXPERIMENTAL.html  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  STYLEGUIDE.md  __init__.py  api-stability.html  architecture.html  asymmetric.py  backend_consistency.html  cli.html  demo_homomorphic.py  encryption.py  example_usage.py  feature_maturity.html  file_encryption.html  formal.html  fuzzing.html  genindex.html  hashing.py  index.html  key_management.py  keystore.html  keystore_plugins.html  migration-from-pyca.html  migration_3.0.html  migration_4.0.html  migration_pipeline_api.html  mkdocs.yml  mypy_plugin.html  no_surprises.html  (+31 more)
.github/: PULL_REQUEST_TEMPLATE.md  labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  security_report.md
.github/workflows/: build.yml  ci.yml  docs.yml  formal.yml  fuzz.yml  pip-audit.yml  python-app.yml  quality-gate.yml  release.yml  reproducibility.yml  test.yml
_sources/: api-stability.md.txt  backend_consistency.md.txt  cli.md.txt  formal.md.txt  fuzzing.md.txt  index.md.txt  index.rst.txt  keystore.md.txt  keystore_plugins.md.txt  migration_3.0.md.txt  migration_4.0.md.txt  mypy_plugin.md.txt  no_surprises.md.txt  operational_hardening.md.txt  pipeline.md.txt  pipeline_coverage.md.txt  pkcs11.md.txt  protocols.md.txt  release_process.md.txt  roadmap.md.txt  security.md.txt  testing.md.txt  testing_plan_matrix.md.txt  testing_playbook.md.txt  usage.md.txt  vision.md.txt  zeroization_faq.md.txt
_sources/api/: public_api_table.rst.txt
_sources/cheatsheets/: recipes.md.txt
api/: modules.html  pipeline.html  public_api_table.html
cheatsheets/: recipes.html
cryptography_suite/: __init__.py  _key_files.py  aead.py  aead_plugins.py  ascon_cipher.py  audit.py  audit.pyi  bls.py  bulletproof.py  cli.py  config.py  constants.py  debug.py  encryption.py  errors.py  exceptions.py  hashing.py  homomorphic.py  hybrid.py  key_management.py  nonce.py  otp.py  pake.py  pipeline.py  post_quantum.py  rich_logging.py  secret_sharing.py  signal_protocol.py  utils.py  x509.py  zksnark.py
cryptography_suite/asymmetric/: __init__.py  bls.py  signatures.py
cryptography_suite/codegen/: __init__.py
cryptography_suite/codegen/templates/: README.md.j2
cryptography_suite/core/: __init__.py  errors.py  logging.py  operations.py  settings.py
cryptography_suite/crypto_backends/: __init__.py  abc.py  pyca_backend.py
cryptography_suite/experimental/: __init__.py  aes_gcm_sst.py  ascon.py  fhe.py  salsa20.py  zk.py
cryptography_suite/experimental/signal/: __init__.py  init_session.py
cryptography_suite/experimental/signal_demo/: __init__.py  init_session.py
cryptography_suite/hashing/: __init__.py
cryptography_suite/keystores/: __init__.py  aws_kms.py  base.py  local.py  mock_hsm.py  pkcs11.py
cryptography_suite/legacy/: __init__.py
cryptography_suite/optional/: __init__.py  salsa20.py
cryptography_suite/pqc/: __init__.py
cryptography_suite/protocols/: __init__.py  key_management.py  otp.py  pake.py  secret_sharing.py  signal_protocol.py
cryptography_suite/protocols/signal/: __init__.py
cryptography_suite/symmetric/: __init__.py  aes.py  ascon.py  chacha.py  kdf.py  stream.py
cryptography_suite/viz/: __init__.py  export.py  widgets.py
cryptography_suite/zk/: __init__.py  bulletproof.py  zksnark.py
docs/: EXPERIMENTAL.md  api-stability.md  architecture.md  backend_consistency.md  cli.md  conf.py  feature_maturity.md  file_encryption.md  formal.md  fuzzing.md  index.rst  keystore_plugins.md  migration-from-pyca.md  migration_3.0.md  migration_4.0.md  migration_pipeline_api.md  mypy_plugin.md  no_surprises.md  operational_hardening.md  pipeline.md  pipeline_catalog.md  pipeline_coverage.md  protocols.md  release_checklist.md  release_process.md  roadmap.md  security.md  security.rst  testing.md  testing_playbook.md  threat-model.md  threat_model.md  usage.md  vision.md  visualization.md  zeroization_faq.md
docs/api/: modules.rst  pipeline.rst  public_api_table.rst
docs/rfc/: README.md  RFC-0001-layered-architecture.md
examples/: vulnerable.py
examples/formal/: README.md  pipeline.yaml
fuzz/: README.md  fuzz_aes.py  fuzz_ecies.py  fuzz_pipeline.py  fuzz_rsa.py
notebooks/: viz_demo.ipynb
protocol/: handshake.proto
rfc/: README.html  RFC-0001-layered-architecture.html
src/crypto_suite/: __init__.py  aead.py  handshake.py  handshake_pb2.py  nonce.py
src/crypto_suite/experimental/: __init__.py  aes_gcm_sst.py
src/crypto_suite/utils/: __init__.py  zeroize.py
src/cryptography_suite/: __init__.py
src/cryptography_suite/cli/: migrate_keys.py
src/suite/: __init__.py
src/suite/experimental/: __init__.py
tests/: README.md  conftest.py  setup_pkcs11_fixture.py  test_aes_property.py  test_architecture_hardening.py  test_ascon.py  test_asymmetric.py  test_async_file_format_streaming.py  test_audit.py  test_audit_freezegun.py  test_aws_kms_keystore.py  test_backend_consistency.py  test_backends.py  test_bls.py  test_bulletproof.py  test_bulletproof_stub.py  test_cli_backends.py  test_cli_export.py  test_cli_file.py  test_cli_file_roundtrip.py  test_cli_gen.py  test_cli_help.py  test_cli_integration.py  test_cli_main.py  test_cli_optional.py  test_core_errors_unit.py  test_core_settings_layers.py  test_docs_claims.py  test_ecies_property.py  test_encryption.py  test_entry_points.py  test_errors.py  test_experimental_loading.py  test_experimental_warning.py  test_file_format_streaming.py  test_file_format_streaming_async.py  test_force_coverage.py  test_gcm_limits.py  test_gcm_sst.py  test_hashing.py  (+56 more)
tools/: bump_changelog.py  check_coverage_thresholds.py  check_deprecated_exports.py  check_experimental_imports.py  generate_public_api_table.py  generate_sbom.py  generate_support_matrix.py  make_full_coverage.py  mypy_crypto_checker.py  release_lint.py  reproducible_build.py  sync_check.py  verify_artifact.py  verify_docs_references.py  vulture_whitelist.py
(+5 files in other folders)
