[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptography-suite"
version = "2.0.0"
description = "A comprehensive and secure cryptographic toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mojtaba Zaferanloo", email = "psychevus@gmail.com"}]
keywords = [
    "cryptography",
    "encryption",
    "security",
    "AES",
    "RSA",
    "ChaCha20",
    "Ed25519",
    "ECDSA",
    "hashing",
    "PAKE",
    "OTP",
    "secret sharing",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
]

dependencies = [
    "cryptography>=44.0.0",
    "py_ecc",
    "spake2",
    "blake3",
    "pynacl",
    "pycryptodome",
]

[project.urls]
Documentation = "https://github.com/Psychevus/cryptography-suite#readme"
Source = "https://github.com/Psychevus/cryptography-suite"
Tracker = "https://github.com/Psychevus/cryptography-suite/issues"

[project.optional-dependencies]
pqc = ["pqcrypto"]
fhe = ["Pyfhel"]
zk = ["pybulletproofs", "PySNARK"]
dev = ["pytest", "pytest-cov", "coverage", "coveralls"]

[project.scripts]
cryptosuite-bulletproof = "cryptography_suite.cli:bulletproof_cli"
cryptosuite-zksnark = "cryptography_suite.cli:zksnark_cli"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
