[metadata]
name = cryptography-suite
version = 2.0.0
description = A comprehensive and secure cryptographic toolkit.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mojtaba Zaferanloo
author_email = psychevus@gmail.com
url = https://github.com/Psychevus/cryptography-suite
license = MIT
classifiers =
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security :: Cryptography
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
keywords = cryptography, encryption, security, AES, RSA, ChaCha20, Ed25519, ECDSA, hashing, PAKE, OTP, secret sharing
project_urls =
    Documentation = https://github.com/Psychevus/cryptography-suite#readme
    Source = https://github.com/Psychevus/cryptography-suite
    Tracker = https://github.com/Psychevus/cryptography-suite/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    cryptography>=41.0.3
    py_ecc
    spake2

[options.extras_require]
pqc =
    pqcrypto
fhe =
    Pyfhel
zk =
    pybulletproofs
    PySNARK
dev =
    pytest
    pytest-cov
    coverage
    coveralls

[flake8]
max-line-length = 120
extend-ignore = E203,W503
exclude = tests,example_usage.py,demo_homomorphic.py
per-file-ignores =
    cryptography_suite/__init__.py:F401

[mypy]
python_version = 3.12
ignore_missing_imports = True
ignore_errors = True
